# freelance-crm

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  slack-app-manifest.yaml
bot/: app.py  config.py  database.py  models.py
bot/handlers/: __init__.py  estimate_handler.py  project_handler.py  redmine_handler.py  report_handler.py  schedule_handler.py
bot/reports/: __init__.py  monthly_report.py
dashboard/: app.py
docs/: slack-manifest.yaml  slack-setup-guide.txt
migrations/: 001_init.sql  002_schedule_estimate_tasks.sql
